--- a/social_network/chats/templates/chat/chat.html
+++ b/social_network/chats/templates/chat/chat.html
@@ -1,15 +1,168 @@
 {% extends 'base_header_main.html' %}
 {% load static %}
 
-{% block content %}
-    <form method = "post" id = "form">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type = "submit">Надіслати</button>
-    </form>
-    <div id = "messages"></div>
+{% block title %}
+    Чати
 {% endblock %}
 
+{% block link %}
+    <link rel="stylesheet" href="{% static 'css/all_chats/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/chat/chat.css' %}">
+{% endblock %}
+{% block content %}
+    <div class = "body">
+        <div class = "all-contacts">
+            <button class = "add-chat">
+                <img src="{% static 'images/plus.png' %}" class = "icon-image" alt="">
+                <span class = "button-title" >Створити груповий чат</span>        
+            </button>
+            <div class = "contacts">
+                <div class = "title-contacts">
+                    <img src="{% static 'images/contact.png' %}" class = "icon-image" alt="">
+                    <span class = "contact-span">Контакти</span>
+                </div>
+                <div class = "field-container">
+                    <img src="{% static 'images/seacrh.png' %}" class = "search-image icon-image" alt="">
+                    <input type="text" class = "seacrh-input" placeholder="Пошук">
+                </div>
+                <div class = "people-contacts">
+                    {% for friend in my_friends %}
+                        <div class = "contact">
+                            <img src="{{ friend.profile_image.url }}" class = "people-avatar" alt="">
+                            <span class = "people-name">{{ friend.user.first_name }} {{ friend.user.last_name }}</span>
+                        </div>
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+        <div class = "people-chat">
+            <div class = "chat">
+                <div id = "messages">
+
+                </div> 
+                <div class = "input-div"> 
+                    <form method="post" class = "input-form" id = "form">
+                        {{ form }}
+                        {% csrf_token %}
+                        <div class = "buttons">
+                            <button class = "button emoji">
+                                <img class = "images" src="{% static 'images/emoji.png' %}" alt="">
+                            </button>
+                            <button class = "button photos">
+                                <img class = "images" src="{% static 'images/photos.png'%}" alt="">
+                            </button>
+                            <button class = "button confirm" type = "submit">
+                                <img class = "images" src="{% static 'images/confirm.png'%}" alt="">
+                            </button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class = "frames">
+            <div class = "frame message">
+                <div class = "title-frame">
+                    <div class = "logo-frame">
+                        <div class = "icon">
+                            <img class = "icon-image" src="{% static 'images/icons/chats.png'%}" alt="">
+                        </div>
+                        <h3 class = "description-block">Повідомлення</h3>
+                    </div>
+                    <div class = "button-frame">
+                        <h3>Дивитись всі</h3>
+                    </div>  
+                </div>
+                <div class = "body-frame">
+                    <div class = "one-people">
+                        <div class = "people-information">
+                            <div class = icon-people>
+                                <img  class = "icon-people"src="{% static 'images/icons/friend-avatar2.png'%}" alt="">
+                            </div>
+                            <div class = "people-name-and-message">
+                                <div class = "people-name-and-time">
+                                    <h3 class = "friend-name">Mona Lisa</h3>
+                                    <h3 class = "time">09:41</h3>
+                                </div>
+                                <h4 class = message-friend>Привіт! Як справи?</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <div class = "one-people">
+                        <div class = "people-information">
+                            <div class = icon-people>
+                                <img  class = "icon-people"src="{% static 'images/icons/friend-avatar2.png'%}" alt="">
+                            </div>
+                            <div class = "people-name-and-message">
+                                <div class = "people-name-and-time">
+                                    <h3 class = "friend-name">Mona Lisa</h3>
+                                    <h3 class = "time">09:41</h3>
+                                </div>
+                                <h4 class = message-friend>Привіт! Як справи?</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <div class = "one-people">
+                        <div class = "people-information">
+                            <div class = icon-people>
+                                <img  class = "icon-people"src="{% static 'images/icons/friend-avatar2.png'%}" alt="">
+                            </div>
+                            <div class = "people-name-and-message">
+                                <div class = "people-name-and-time">
+                                    <h3 class = "friend-name">Mona Lisa</h3>
+                                    <h3 class = "time">09:41</h3>
+                                </div>
+                                <h4 class = message-friend>Привіт! Як справи?</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <div class = "one-people">
+                        <div class = "people-information">
+                            <div class = icon-people>
+                                <img class = "icon-people" src="{% static 'images/icons/friend-avatar2.png'%}" alt="">
+                            </div>
+                            <div class = "people-name-and-message">
+                                <div class = "people-name-and-time">
+                                    <h3 class = "friend-name">Mona Lisa</h3>
+                                    <h3 class = "time">09:41</h3>
+                                </div>
+                                <h4 class = message-friend>Привіт! Як справи?</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class = "frame message">
+                <div class = "title-frame">
+                    <div class = "logo-frame">
+                        <div class = "icon">
+                            <img class = "icon-image" src="{% static 'images/icons/chats.png'%}" alt="">
+                        </div>
+                        <h3 class = "description-block">Групові чати</h3>
+                    </div>
+                    <div class = "button-frame">
+                        <h3>Дивитись всі</h3>
+                    </div>  
+                </div>
+                <div class = "body-frame">
+                    <div class = "one-people">
+                        <div class = "people-information">
+                            <div class = icon-people>
+                                <img  class = "icon-people"src="{% static 'images/icons/friend-avatar2.png'%}" alt="">
+                            </div>
+                            <a class = "people-name-and-message" href = "{% url 'chat'%}">
+                                <div class = "people-name-and-time">
+                                    <h3 class = "friend-name">Mona Lisa</h3>
+                                    <h3 class = "time">09:41</h3>
+                                </div>
+                                <h4 class = message-friend>Привіт! Як справи?</h4>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+{% endblock %}
 {% block script %}
     <script src = "{% static 'js/chat.js'%}"></script>
 {% endblock %}
