--- a/social_network/friends/templates/friends/friends.html
+++ b/social_network/friends/templates/friends/friends.html
@@ -29,9 +29,24 @@
                 <div class = "all-cards request">
                     {% for request in all_requests %}
                         {% if not request.is_friend %}
+                            <div class = "deleting-confirming hidden" id = "{{request.sent_user.pk}}">
+                                <h1 class = "confirm-action">Підтвердити дію</h1>
+                                <h3 class = "question-deleting">Ви дійсно хочете видалити користувача?</h3>
+                                <div class = "confirming-buttons">
+                                    <a class = "button-cancel">
+                                        Скасувати
+                                    </a>
+                                    <a class = "button button-confirm-deleting button-delete" id = "{% url 'delete_request' request.sent_user.pk %}">
+                                        Підтвердити
+                                    </a>
+                                </div>
+                            </div>
+                            <div class = "fullscreen hidden"></div>
                             <div class = "card" id = "card-request-{{request.sent_user.pk}}">
                                 <div class = "profile-card">
-                                    <img class = "avatar" src="{{request.sent_user.profile.profile_image.url}}" alt="">
+                                    <a href="{% url 'friend_profile' request.sent_user.pk %}" class = "avatar">
+                                        <img class = "avatar" src="{{request.sent_user.profile.profile_image.url}}" alt="">
+                                    </a>
                                 </div>
                                 <div class = "card-info">
                                     <h1 class = "name">{{request.sent_user.first_name}} {{request.sent_user.last_name}}</h1>
