--- a/social_network/main/static/css/style.css
+++ b/social_network/main/static/css/style.css
@@ -170,11 +170,13 @@ h1, h2, h3, h4, h5, h6 {
 }
 .icon-people{
     width: calc(1.5vw + 2.2vh);
+    border-radius: 1234px;
     height: calc(1.5vw + 2.2vh);
 }
 .request{
-    height: calc(10vh + 8vw );
+    max-height: calc(10vh + 8vw);
     padding-top: calc(0.6vw + 0.9vh);
+    
 }
 .message{
     padding-top: calc(0.6vw + 0.9vh);
@@ -554,6 +556,7 @@ input{
     border-radius: calc(0.3vw + 0.5vh);
     border: calc(0.03vw + 0.05vh) black solid;
     font-size: calc(0.5vw + 0.8vh);
+    padding: calc(0.3vw + 0.5vh) calc(0.5vw + 0.8vh);
 }
 
 .label-tag{
@@ -572,6 +575,11 @@ textarea{
     border-radius: calc(0.3vw + 0.5vh);
     border: calc(0.03vw + 0.05vh) black solid;
     font-size: calc(0.5vw + 0.8vh);
+    padding: calc(0.3vw + 0.5vh) calc(0.5vw + 0.8vh);
+}
+.input-url{
+    display: flex;
+
 }
 .inputs-photo-emoji-form{
     display: flex;
@@ -840,7 +848,12 @@ option:hover{
     width: calc(0.7vw + 0.9vh);
     height: calc(0.7vw + 0.9vh);
 }
-
+.image-tag{
+    width: calc(0.7vw + 0.9vh);
+    height: calc(0.7vw + 0.9vh);
+    margin-top: calc(1vw + 1.4vh);
+    margin-left: calc(0.3vw + 0.5vh);
+}
 .button-hashtag{
     all: unset;
     width: calc(0.7vw+1vh);
@@ -1040,4 +1053,8 @@ div.frame.profile{
 .text-no{
     font-size: calc(0.4vw + 0.6vh);
     color: #CDCED2;
+}
+
+.choosed{
+    background: rgb(185, 185, 185);
 }
