--- a/social_network/main/templates/main/index.html
+++ b/social_network/main/templates/main/index.html
@@ -173,6 +173,8 @@
                     {% for post in posts %}
                     {% for user in all_peoples %}
                     {% if post.user_id == user.user_id %}
+
+
                         <div class = "redact-post-function hidden">
                             <div class="redact-form">
                                 <div class="cross-img">
@@ -260,29 +262,32 @@
                                 <div class = "dots dots-post">
                                     <img class = "dot" src="{% static 'images/icons/Dots.png'%}" alt="">
                                 </div>         
-                                </div>
-                        
+                            </div>
+                            
                             <div class = "body-post">
                                 <h2 class = "title-post">{{post.title}}</h2>
                                 <h3 class = "description-post">{{post.text}}</h3>
                                 {% if post.tags.all %}
-                                    <div class = "hashtags">
-                                        
-                                        {% for tag in post.tags.all %}
-                                            <h1 class = "hashtag">{{tag.tag_name}}</h1>
-                                        {% endfor %}
-                                    </div>
-
-                                {% endif %}
-                                <div class = "url-post">
-                                    <a href = "{{ post.url }}" class = "url-post" target="_blank">{{ post.url }} </a>
-                                </div>
-                                <div class="photos ">
-                                    {% for img in post.pictures_set.all %}
-                                        <img src="{{ img.image.url }}" class="image photos-{{ post.pictures_set.all|length }} number-{{forloop.counter}}"   >
+                                <div class = "hashtags">
+                                    
+                                    {% for tag in post.tags.all %}
+                                    <h1 class = "hashtag">{{tag.tag_name}}</h1>
                                     {% endfor %}
                                 </div>
-
+                                {% endif %}
+                                
+                                {% for url in all_urls %}
+                                    {% if url.post == post %}
+                                    <div class = "url-post">
+                                        <a href = "{{ url.url }}" target="_blank" class = "url-post">{{ url.url}}</a>
+                                    </div>
+                                    {% endif %}
+                                {% endfor %}
+                                <div class="photos ">
+                                    {% for img in post.pictures_set.all %}
+                                    <img src="{{ img.image.url }}" class="image photos-{{ post.pictures_set.all|length }} number-{{forloop.counter}}"   >
+                                    {% endfor %}
+                                </div>
                                 <div class = "reviews">
                                     <div class = "review">
                                         <div class = "icon-review">
@@ -309,76 +314,72 @@
     </div>
 
 
-    <div class="hidden frame-form">
-        <div class="form">
-            <div class="cross-img">
-                <img class="cross" src="{% static 'images/icons/cross.png'%}" alt="">
-            </div>
+        <div class="hidden frame-form">
+            <div class="form">
+                <div class="cross-img">
+                    <img class="cross" src="{% static 'images/icons/cross.png'%}" alt="">
+                </div>
 
-            <h1 class="title-form">Створення публікації</h1>
-            <form method="post" class = "input-form"enctype="multipart/form-data">
-                {% csrf_token %}
+                <h1 class="title-form">Створення публікації</h1>
+                <form method="post" class = "input-form"enctype="multipart/form-data">
+                    {% csrf_token %}
 
-                {% for field in form %}
-                    {% if field.name == 'images' %}
-                        <div id="image-preview-container">
-
-                        </div>
-                        <div class="label-tag">
-                            {{ field.label_tag }}
-                            <div class="inputs-photo-emoji-form">
-                                <div class="emojy-and-photo">
-                                    {{ field }}
-                                    <div class = "merge-image">
-                                        <label for="image-to-post-form" class = "image-icon-form-label">
-                                            <img class="image-icon-form" src="{% static 'images/icons/icon-image.png' %}" alt="">
-                                            
+                    {% for field in form %}  
+                        
+                        {% if field.name == "tags" %}
+                            <div class = "all_tags">    
+                                <div class = "tag-container">
+                                    {% for tag in tags %}
+                                        <label class="tag-object" data-id="{{ tag.id }}">
+                                            {{ tag.tag_name }}
+                                            <input type="checkbox" name="tags" value="{{ tag.id }}">
                                         </label>
-
-                                        <img class = "image-emoji-form" src="{% static 'images/icons/emoji.png' %}" alt="">
-                                    </div>
-                                    <button class="button-upload-form" type="submit">
-                                        <h4 class="upload-title">Публікація</h4>
-                                        <img class = "image-planer" src="{% static 'images/icons/PlaneR.png' %}" alt="">
+                                    {% endfor %}
+                                    <button class = "button-hashtag">
+                                        <img  class = "image-hashtag" src="{% static 'images/icons/add_hashtag.png' %}" alt="">
                                     </button>
                                 </div>
                             </div>
-                        </div>
-                        <div class="field-error">{{ field.errors }}</div>
-                    {% elif field.name == "tags" %}
-                        <div class = "all_tags">    
-                            <div class = "tag-container">
-                                {% for tag in tags %}
-                                    <label class="tag-object" data-id="{{ tag.id }}">
-                                        {{ tag.tag_name }}
-                                        <input type="checkbox" name="tags" value="{{ tag.id }}">
-                                    </label>
-                                {% endfor %}
-                                <button class = "button-hashtag">
-                                    <img  class = "image-hashtag" src="{% static 'images/icons/add_hashtag.png' %}" alt="">
-                                </button>
-                            </div>
-                        </div>
-                    {% elif field.name == "url" %}
-                        <div class = "input-url">
+                        {% elif field.name != "images" and field.name != "url" %}
                             <div class="inputs-form">
                                 <div class="label-tag">{{ field.label_tag }}</div>
                                 <div class="field">{{ field }}</div>
                                 <div class="field-error">{{ field.errors }}</div>
                             </div>
-                            <img  class = "image-tag" src="{% static 'images/icons/add_hashtag.png' %}" alt="">
+                        {% endif %}
+                    {% endfor %}
+                    <div class = "url-inputs">
+                        {% for field in form %}
+                            {% if field.name == "url" %}
+                                <div class = "input-url">
+                                    <div class="inputs-form">
+                                        <div class="label-tag">{{ field.label_tag }}</div>
+                                        <div class="field">{{ field }}</div>
+                                        <div class="field-error">{{ field.errors }}</div>
+                                    </div>
+                                    <img  class = "image-tag" src="{% static 'images/icons/add_hashtag.png' %}" alt="">
+                                </div>
+                            {% endif%}
+                        {% endfor %}
+                    </div>
+                    <div class="label-tag">
+                        <div id="image-preview-container"></div>
+                        <div class="inputs-photo-emoji-form">
+                            <div class="emojy-and-photo">
+                                <img id="custom-upload-button" class="image-icon-form" src="{% static 'images/icons/icon-image.png' %}" alt="Upload">
+                                <input type="file" id="image-to-post-form" name="images" multiple hidden>
+                                <button class="button-upload-form" type="submit">
+                                    <h4 class="upload-title">Публікація</h4>
+                                    <img class="image-planer" src="{% static 'images/icons/PlaneR.png' %}" alt="">
+                                </button>
+                            </div>
                         </div>
-                    {% else %}
-                        <div class="inputs-form">
-                            <div class="label-tag">{{ field.label_tag }}</div>
-                            <div class="field">{{ field }}</div>
-                            <div class="field-error">{{ field.errors }}</div>
-                        </div>
-                    {% endif %}
-                {% endfor %}
-            </form>
-        </div>    
-    </div>
+                    </div>
+                </form>
+
+                </form>
+            </div>    
+        </div>
 
     {% if request.user.first_name == "" %}
         <div class="form-overlay" >
@@ -419,5 +420,4 @@
 {% block script %}
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src = "{% static 'js/script.js' %}"></script>
-    <script src = "{% static 'js/ajax.js' %}"></script>
 {% endblock %}
